Atualização de estilo e acréscimo do arquivo javascript

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 			</div>
 			<div id="jogo" class="container tab-pane fade" align="center"><br>
 				<h3>Snake's game minimalist rereading</h3><br>
-				<div class="spinner-border text-muted" id="load"></div><br><br>
+				<div class="load"> <img src="imgs/preloader.gif"></div><br><br>
+                <div id="main">
+                </div>
 				<div class="toast" data-autohide="false" id="info">
 					<div class="toast-header">
 						<strong class="mr-auto text-primary">Fim de jogo</strong>
