Adição do .js ao index

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 		<div class="jumbotron text-center" style="margin-bottom:0">
 			<p>Feito com <a href="#" data-toggle="tooltip" title="=^.^="><i class="fas fa-heart"></i></a> por Lauany Reis da Silva</p>
 		</div>
+        <script src="js/sgmr.js"></script>
 		<script>
 			$(document).ready(function(){
 			$('[data-toggle="tooltip"]').tooltip();  
