Alteração de contexto e finalização de cenário

--- a/webpack/index.html
+++ b/webpack/index.html
@@ -20,15 +20,11 @@
 		</nav>
 		<div class="tab-content">
 			<div id="home" class="container tab-pane active"><br>
-				<h3>HOME</h3>
-				<p>Jogo elaborado como trabalho da disciplina de Sistemas Multimídia, ministrada pelo professor Leandro Vaguetti.</p>
-				<div id="score"></div>
-				<!--script>
-		</script-->
+          <br/><br/>
+          <p>Jogo elaborado como trabalho da disciplina de Sistemas Multimídia, ministrada pelo professor Leandro Vaguetti.</p>
+          <div id="score"></div>
+          <div id="life"></div>
 			</div>
 		</div>
-		<!--div class="jumbotron text-center" style="margin-bottom:0">
-			<p>Feito com <a href="#"><i class="fas fa-heart"></i></a> por <a style="text-decoration:none" href="http://bit.ly/LauanyRS">Lauany Reis da Silva</a> </p>
-		</div-->
 	</body>
 </html>
